--- a/Basics/1. Introduction.md
+++ b/Basics/1. Introduction.md
@@ -14,3 +14,9 @@ generation of that response.
 
 
 PHP must run on a Web Server! I highly recommend using [XAMPP](https://www.apachefriends.org/).
+
+
+Notes:
+- Some Functions, and other Methods, won't work on ALL PHP versions.
+- Every IDE supporting PHP is good! I highly recommend using PhpStorm (trial-not free).
+- Descriptions and Explanations will be written inside the files using Comments.
