--- a/Basics/1. Introduction.md
+++ b/Basics/1. Introduction.md
@@ -13,7 +13,7 @@ generation of that response.
 
 
 
-PHP must run on a Web Server! I highly recommend using [XAMPP](https://www.apachefriends.org/).
+!PHP must run on a Web Server! I highly recommend using [XAMPP](https://www.apachefriends.org/).
 
 
 Notes:
