--- a/Basics/1. Introduction.md
+++ b/Basics/1. Introduction.md
@@ -20,3 +20,4 @@ Notes:
 - Some Functions, and other Methods, won't work on ALL PHP versions.
 - Every IDE supporting PHP is good! I highly recommend using PhpStorm (trial-not free).
 - Descriptions and Explanations will be written inside the files using Comments.
+- I highly recommend (for beginners/learners) going through the files in numerical order.
