--- a/1. Basics/1. Introduction.md
+++ b/1. Basics/1. Introduction.md
@@ -22,3 +22,19 @@ Notes:
 - Every IDE supporting PHP is good! I highly recommend using PhpStorm (trial-not free).
 - Descriptions and Explanations will be written inside the files using Comments.
 - I highly recommend (for beginners/learners) going through the files in numerical order.
+
+
+
+About PHP:
+- PHP is an acronym for "PHP: Hypertext Preprocessor".
+- PHP Scripts are executed on the server.
+- PHP Files have the ".php" extension.
+- PHP files can contain text, HTML, CSS, JavaScript, and PHP code.
+
+
+  To start using PHP, you can:
+
+- Find a web host with PHP and MySQL support.
+- Install a web server on your own PC, and then install PHP and MySQL.
+
+[The official PHP website (PHP.net) has installation instructions for PHP](http://php.net/manual/en/install.php)
