--- a/1. Basics/1. Introduction.md
+++ b/1. Basics/1. Introduction.md
@@ -16,20 +16,20 @@ generation of that response.
 !PHP must run on a Web Server! I highly recommend using [XAMPP](https://www.apachefriends.org/).
 <br><br>
 
-Notes:
+<h2>Notes:</h2>
 - Some Functions, and other Methods, won't work on ALL PHP versions.
 - Every IDE supporting PHP is good! I highly recommend using PhpStorm (trial-not free).
 - Descriptions and Explanations will be written inside the files using Comments.
 - I highly recommend (for beginners/learners) going through the files in numerical order.
 <br><br>
 
-About PHP:
+<h2>About PHP:</h2>
 - PHP is an acronym for "PHP: Hypertext Preprocessor".
 - PHP Scripts are executed on the server.
 - PHP Files have the ".php" extension.
 - PHP files can contain text, HTML, CSS, JavaScript, and PHP code.
 <br><br><br>
-  To start using PHP, you can:
+To start using PHP, you can:
 
 - Find a web host with PHP and MySQL support.
 - Install a web server on your own PC, and then install PHP and MySQL.
