--- a/1. Basics/1. Introduction.md
+++ b/1. Basics/1. Introduction.md
@@ -18,24 +18,24 @@ generation of that response.
 
 <h2>Notes:</h2>
 <ul>
-<li>- Some Functions, and other Methods, won't work on ALL PHP versions.</li>
-<li>- Every IDE supporting PHP is good! I highly recommend using PhpStorm (trial-not free).</li>
-<li>- Descriptions and Explanations will be written inside the files using Comments.</li>
-<li>- I highly recommend (for beginners/learners) going through the files in numerical order.</li>
+<li> Some Functions, and other Methods, won't work on ALL PHP versions.</li>
+<li> Every IDE supporting PHP is good! I highly recommend using PhpStorm (trial-not free).</li>
+<li> Descriptions and Explanations will be written inside the files using Comments.</li>
+<li> I highly recommend (for beginners/learners) going through the files in numerical order.</li>
 </ul>
 <br><br>
 
 <h2>About PHP:</h2>
 <ul>
-<li>- PHP is an acronym for "PHP: Hypertext Preprocessor".</li>
-<li>- PHP Scripts are executed on the server.</li>
-<li>- PHP Files have the ".php" extension.</li>
-<li>- PHP files can contain text, HTML, CSS, JavaScript, and PHP code.</li>
+<li> PHP is an acronym for "PHP: Hypertext Preprocessor".</li>
+<li> PHP Scripts are executed on the server.</li>
+<li> PHP Files have the ".php" extension.</li>
+<li> PHP files can contain text, HTML, CSS, JavaScript, and PHP code.</li>
 </ul>
 <br><br><br>
 To start using PHP, you can:
 <ul>
-<li>- Find a web host with PHP and MySQL support.</li>
-<li>- Install a web server on your own PC, and then install PHP and MySQL.</li>
+<li> Find a web host with PHP and MySQL support.</li>
+<li> Install a web server on your own PC, and then install PHP and MySQL.</li>
 </ul>
 [The official PHP website (PHP.net) has installation instructions for PHP](http://php.net/manual/en/install.php)
