--- a/1. Basics/1. Introduction.md
+++ b/1. Basics/1. Introduction.md
@@ -33,7 +33,7 @@ generation of that response.
 <li> PHP files can contain text, HTML, CSS, JavaScript, and PHP code.</li>
 </ul>
 <br><br>
-To start using PHP, you can:
+<b>To start using PHP, you can:</b>
 <ul>
 <li> Find a web host with PHP and MySQL support.</li>
 <li> Install a web server on your own PC, and then install PHP and MySQL.</li>
