--- a/1. Basics/1. Introduction.md
+++ b/1. Basics/1. Introduction.md
@@ -38,4 +38,4 @@ generation of that response.
 <li> Find a web host with PHP and MySQL support.</li>
 <li> Install a web server on your own PC, and then install PHP and MySQL.</li>
 </ul>
-<a href="https://www.php.net/manual/en/install.php">The official PHP website has installation instructions for PHP</a>
+<a href="https://www.php.net/manual/en/install.php">The official PHP website (PHP.net) has installation instructions for PHP</a>
