--- a/1. Basics/1. Introduction.md
+++ b/1. Basics/1. Introduction.md
@@ -33,6 +33,21 @@ generation of that response.
 <li> PHP files can contain text, HTML, CSS, JavaScript, and PHP code.</li>
 </ul>
 <br><br>
+
+
+<h2>What Can PHP Do?</h2>
+<ul>
+<li>PHP can generate dynamic page content.</li>
+<li>PHP can create, open, read, write, delete, and close files on the server.</li>
+<li>PHP can collect form data.</li>
+<li>PHP can send and receive cookies.</li>
+<li>PHP can add, delete, modify data in your database.</li>
+<li>PHP can be used to control user-access.</li>
+<li>PHP can encrypt data.</li>
+</ul>
+<br><br>
+
+
 <b>To start using PHP, you can:</b>
 <ul>
 <li> Find a web host with PHP and MySQL support.</li>
